--- a/web/home.tmpl
+++ b/web/home.tmpl
@@ -79,6 +79,20 @@
       <div class="pagination">{{=it.pagination || ''}}</div>
     </div>
     <div class="span4">
+      <!--Google广告|可删除或替换成你自己的-->
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li style="min-height:60px;max-height:300px;overflow:hidden">
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+          <ins class="adsbygoogle"
+               style="display:block"
+               data-ad-client="ca-pub-1941367294435664"
+               data-ad-slot="2234709637"
+               data-ad-format="auto"></ins>
+          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+        </li>
+      </ul>
+
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
         <li class="nav-header">订阅我们</li>
