--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -95,7 +95,7 @@
         <li class="divider"></li>
         {{~ it.articlesSina:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
+          <a href="/redirect/{{=article.id}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
         </li>
         {{~}}
 
@@ -110,7 +110,7 @@
         <li class="divider"></li>
         {{~ it.articlesSohu:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
+          <a href="/redirect/{{=article.id}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
         </li>
         {{~}}
 
@@ -125,7 +125,7 @@
         <li class="divider"></li>
         {{~ it.articles163:article:index}}
         <li>
-          <a href="{{=article.url}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
+          <a href="/redirect/{{=article.id}}" target="_blank"><i class="formatdate hide">{{=article.postTime}}</i> {{=article.title}}</a>
         </li>
         {{~}}
         <li><br/></li>
