--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -195,6 +195,13 @@
       <br>
     </div>
     <div class="span4">
+      <div class="nav-separator"></div>
+      <ul class="dropdown-menu layout-pane">
+        <li class="nav-header">融资融券余额走势图 <a href='/home/投资日历' target="_blank">放大</a></li>
+        <li class="divider"></li>
+        <li><div id="chart_rong" style="width: 100%;height:240px;"></div></li>
+      </ul>
+
       <!--新闻联播-->
       {{?it.articleCCTV && it.articleCCTV.content}}
       <div class="nav-separator"></div>
@@ -221,20 +228,6 @@
         {{~}}
 
         <li><br/></li>
-      </ul>
-
-      <!--Google广告|可删除或替换成你自己的-->
-      <div class="nav-separator"></div>
-      <ul class="dropdown-menu layout-pane">
-        <li style="min-height:60px;max-height:300px;overflow:hidden">
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-1941367294435664"
-               data-ad-slot="2234709637"
-               data-ad-format="auto"></ins>
-          <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
-        </li>
       </ul>
 
       <div class="nav-separator"></div>
