--- a/web/index.tmpl
+++ b/web/index.tmpl
@@ -197,9 +197,9 @@
     <div class="span4">
       <div class="nav-separator"></div>
       <ul class="dropdown-menu layout-pane">
-        <li class="nav-header">融资融券余额走势图（亿） <a href='/home/投资日历' target="_blank">放大</a></li>
+        <li class="nav-header">融资融券余额走势图（亿） <a href='/rzrq' target="_blank">放大</a></li>
         <li class="divider"></li>
-        <li><div id="chart_rong" style="width: 100%;height:240px;"></div></li>
+        <li><div id="chart_rong"></div></li>
       </ul>
 
       <!--新闻联播-->
