为走势图添加缓存

--- a/web/rzrq.tmpl
+++ b/web/rzrq.tmpl
@@ -17,6 +17,10 @@
 
 <div class="chart-wrapper">
   <div id="chart_rong"></div>
+
+  <div>
+    注*　数据来源 <a href="http://www.sse.com.cn/market/othersdata/margin/sum/" target="_blank">上海证券交易所</a>，<a href="http://www.szse.cn/main/disclosure/rzrqxx/rzrqjy/" target="_blank">深圳证券交易所</a>
+  </div>
 </div>
 
 
