--- a/web/baozhenjin.tmpl
+++ b/web/baozhenjin.tmpl
@@ -18,7 +18,7 @@
 <div class="chart-wrapper">
   <div id="chart_baozhenjin"></div>
 
-  <div class="container">
+  <div>
     注*　数据来源 <a href="http://www.sipf.com.cn/subject/sub_ch/tjsj/index.html" target="_blank">中国证券投资者保护基金有限责任公司</a>
   </div>
 </div>
